--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     background: #f2fbf1;
     border-top-left-radius: 90px;
     border-top-right-radius: 90px;
+    animation: a1 5s infinite;
 }
 #spooky #body:before,
 #spooky #body:after {
@@ -47,6 +48,7 @@ body {
     border-radius: 50%;
     background: #f2fbf1;
     animation: floaty .2s infinite;
+    animation: a1 5s infinite;
 }
 #spooky #body:before {
     left: -18px;
@@ -118,6 +120,7 @@ body {
     margin-left: 20px;
     width: 10px;
     height: 10px;
+
 }
 #spooky #body #eyes {
     display: flex;
@@ -163,6 +166,8 @@ body {
     height: 36px;
     background: #f2fbf1;
     border-radius: 50%;
+    animation: a1 5s infinite;
+    animation-duration: 5s;
 }
 #shadow {
     margin: -90px auto 0;
@@ -191,3 +196,14 @@ body {
         transform: scale(0.8);
     }
 }
+@keyframes a1{
+    0%{
+      background: #a0a0f3;
+    }
+      50%{
+        background: #f320c6;
+      }
+      100%{
+        background: rgb(113, 176, 248);
+      }
+    }
